<resources>
    <string name="app_name">SOS Emergency</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_home">Home</string>
    <string name="title_report">Report</string>
    <string name="title_contact">Contact</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="main_button_text">Go to Home page</string>
    <string name="description_contact">Manage your trusted circle for quick and easy SOS alerts</string>
    <string name="max_contact_contact">Max %1$d contacts</string>
    <string name="add_new_contact">Add new</string>
    <string name="name_placeholder_contact">Trusted Contact</string>
    <string name="phone_placeholder_contact">+212600000000</string>
    <string name="report_question_text">What kind of emergency?</string>
    <string name="report_location_button_text">Find Location</string>
    <string name="report_send_button">Send Report</string>
    <string name="report_fire_icon_text">Fire</string>
    <string name="report_accident_icon_text">Accident</string>
    <string name="report_earthquake_icon_text">Earthquake</string>
    <string name="report_flood_icon_text">Flood</string>
    <string name="report_bribery_icon_text">Bribery</string>
    <string name="report_crime_icon_text">Crime</string>
    <string name="report_button_description_home">You have more details about the emergency? report it now! \nNotify authorities and seek assistance</string>
    <string name="header_description_home">Press and hold the button below and the help will reach you shortly</string>
    <string name="header_title_home">Emergency help needed?</string>
    <string name="report_emergency_edit_text">Where is the emergency?</string>
    <string name="home_emergency_coming_message">Help is on the way.Stay calm</string>
    <string name="emergency_sms_template">I need your help! I\'m in an emergency situation\n%s</string>
    <string name="emergency_sms_type_template">Type of emergency: %s</string>
    <string name="emergency_location_sms_template">Location: %s</string>
    <string-array name="emergency_service_name">
        <item>@string/report_fire_icon_text</item>
        <item>@string/report_accident_icon_text</item>
        <item>@string/report_earthquake_icon_text</item>
        <item>@string/report_crime_icon_text</item>
        <item>@string/report_flood_icon_text</item>
        <item>@string/report_bribery_icon_text</item>
    </string-array>
    <string-array name="emergency_service_phone">
        <item>+212637844314</item>
        <item>+212637844314</item>
        <item>+212637844314</item>
        <item>+212637844314</item>
        <item>+212637844314</item>
        <item>+212637844314</item>
    </string-array>
</resources>