<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.report.ReportFragment">

    <TextView
        android:id="@+id/textReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_question_text"
        android:layout_margin="10dp"
        android:textSize="20dp"
        android:textColor="@color/primary" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="12dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="0dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/report_fire_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/ic_fire_45dp"
                    android:drawableTint="@color/primary"
                    android:gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/report_fire_icon_text"
                    android:textColor="@color/primary"
                    android:gravity="center" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="0dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/report_accident_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:width="0dp"
                android:button="@null"
                android:drawableTop="@drawable/ic_car_accident_45dp"
                android:drawableTint="@color/primary"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/report_accident_icon_text"
                android:textColor="@color/primary"
                android:gravity="center"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="0dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/report_earthquake_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:width="0dp"
                    android:button="@null"
                    android:drawableTop="@drawable/ic_earthquake_damage_45dp"
                    android:drawableTint="@color/primary"
                    android:gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/report_earthquake_icon_text"
                    android:textColor="@color/primary"
                    android:gravity="center"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="0dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/report_crime_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:width="0dp"
                    android:button="@null"
                    android:drawableTop="@drawable/ic_crime_45dp"
                    android:drawableTint="@color/primary"
                    android:gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/report_crime_icon_text"
                    android:textColor="@color/primary"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="0dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/report_flood_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:width="0dp"
                    android:button="@null"
                    android:drawableTop="@drawable/ic_flood_45dp"
                    android:drawableTint="@color/primary"
                    android:gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/report_flood_icon_text"
                    android:textColor="@color/primary"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="0dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/report_bribery_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:width="0dp"
                    android:button="@null"
                    android:drawableTop="@drawable/ic_bribery_45dp"
                    android:drawableTint="@color/primary"
                    android:gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/report_bribery_icon_text"
                    android:textColor="@color/primary"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/report_search_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:width="0dp"
            android:hint="Where is the emergency?"
            android:inputType="text"/>

        <Button
            android:id="@+id/report_location_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:width="0dp"
            android:backgroundTint="@color/primary"
            android:textColor="@color/white"
            android:text="@string/report_location_button_text"
            android:clickable="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/report_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            />

        <Button
            android:id="@+id/report_send_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/primary"
            android:backgroundTint="@color/primary"
            android:gravity="center"
            android:text="@string/report_send_button"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>


</LinearLayout>