<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/header_title_home"
                android:textColor="@color/black"
                android:textFontWeight="700"
                android:textSize="35sp"
                android:lineHeight="38dp"/>

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/header_description_home"
                android:textColor="@color/black"
                android:textFontWeight="400" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="200dp"
                android:layout_height="199dp"
                android:layout_gravity="center"
                android:src="@drawable/alarm" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="80"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/report_button_description_home"
                android:textColor="@color/black"
                android:textFontWeight="400" />

            <Button
                android:layout_width="0dp"
                android:text="Report"
                android:textColor="@color/white"
                android:background="@drawable/rounded_corners"
                android:layout_weight="20"
                android:layout_height="wrap_content"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>